--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script src="gpu-browser.min.js"></script>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body id="mainframe">
+  <body id="mainframe" style="margin:0">
     <script src="main.js"></script>
   </body>
 </html>
